<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@color/blue_light">


    <TextView
        android:id="@+id/headerId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/id"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/headerDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/descricao"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/headerValorUnitario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valUnitario"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/headerQuantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/qtdEstoque"
        android:textStyle="bold"
        android:gravity="center"/>

</LinearLayout>